[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/TimerDisplay.gd" type="Script" id=1]
[ext_resource path="res://resources/in_game.theme" type="Theme" id=2]

[node name="PanelContainer" type="PanelContainer"]
margin_left = 129.0
margin_top = 77.0
margin_right = 364.0
margin_bottom = 144.0
size_flags_horizontal = 4
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="TimeContainer" type="HBoxContainer" parent="."]
margin_left = 3.0
margin_top = 3.0
margin_right = 232.0
margin_bottom = 64.0

[node name="Empty" type="Control" parent="TimeContainer"]
margin_right = 5.0
margin_bottom = 61.0
rect_min_size = Vector2( 5, 0 )

[node name="TenMinutesLabel" type="Label" parent="TimeContainer"]
margin_left = 9.0
margin_right = 41.0
margin_bottom = 61.0
rect_min_size = Vector2( 32, 0 )
text = "0"
align = 1

[node name="UnitMinutesLabel" type="Label" parent="TimeContainer"]
margin_left = 45.0
margin_right = 77.0
margin_bottom = 61.0
rect_min_size = Vector2( 32, 0 )
text = "0"
align = 1

[node name="ColonLabel" type="Label" parent="TimeContainer"]
margin_left = 81.0
margin_right = 95.0
margin_bottom = 61.0
text = ":"
align = 1

[node name="TenSecondsLabel" type="Label" parent="TimeContainer"]
margin_left = 99.0
margin_right = 131.0
margin_bottom = 61.0
rect_min_size = Vector2( 32, 0 )
text = "0"
align = 1

[node name="UnitSecondsLabel" type="Label" parent="TimeContainer"]
margin_left = 135.0
margin_right = 167.0
margin_bottom = 61.0
rect_min_size = Vector2( 32, 0 )
text = "1"
align = 1

[node name="DotLabel" type="Label" parent="TimeContainer"]
margin_left = 171.0
margin_right = 184.0
margin_bottom = 61.0
text = "."
align = 1

[node name="TenthSecondsLabel" type="Label" parent="TimeContainer"]
margin_left = 188.0
margin_right = 220.0
margin_bottom = 61.0
rect_min_size = Vector2( 32, 0 )
text = "0"
align = 1

[node name="Empty2" type="Control" parent="TimeContainer"]
margin_left = 224.0
margin_right = 229.0
margin_bottom = 61.0
rect_min_size = Vector2( 5, 0 )
